# src/controllers/auth.controller.ts
@@ -4,6 +4,7 @@ import UserModel from "../models/user.model";
 import { encrypt } from "../utils/encryption";
 import { generateToken } from "../utils/jwt";
 import { IReqUser } from "../middlewares/auth.middleware";
+import { configDotenv } from "dotenv";
 
 // agar semua data struktur ada type datanya maka harus di declare type nya
 type TRegister = {
@@ -35,7 +36,27 @@ const registerValidateSchema = Yup.object({
    
    email: Yup.string().email().required(),
    
-   password: Yup.string().required(),
+   password: Yup.string().required().min(6, "Password must be at least 6 characters")
+   .test(
+      'at-least-one-uppercase-letter', 
+      "Contains at least one uppercase letter", 
+      (value) => {
+
+      if (!value) return false;
+
+      const regex = /^(?=.*[A-Z])/;
+      
+      return regex.test(value);
+
+   }).test('at-least-one-number', "Contains at least one number", (value) => {
+
+      if (!value) return false;
+
+      const regex = /^(?=.*\d)/;
+      
+      return regex.test(value);
+      
+   }),
 
    confirmPassword: Yup.string()
       .required()
@@ -46,6 +67,9 @@ const registerValidateSchema = Yup.object({
 
 export default {
    async register(req: Request, res: Response) { 
+      /**
+       #swagger.tags = ['auth']
+       */
 
       const { fullName, username, email, password, confirmPassword } = 
 
@@ -103,7 +127,8 @@ export default {
    },
 
    async login(req: Request, res: Response) {
-      /*  #swagger.requestBody = {
+      /* #swagger.tags = ['auth']
+         #swagger.requestBody = {
             required: true,
             content: {
                "application/json": {
@@ -140,6 +165,7 @@ export default {
 
                },
             ],
+            isActive: true,
          });
 
          if (!userByIdentifier) {
@@ -197,6 +223,7 @@ export default {
    async me(req: IReqUser, res: Response) {
 
       /**
+       #swagger.tags = ['auth']
        #swagger.security = [{
         "bearerAuth": []
        }]
@@ -224,5 +251,42 @@ export default {
 
          });
       };
+   },
+
+   async activation(req: Request, res: Response) {
+      /**
+       #swagger.tags = ['Auth']
+       #swagger.requestBody = {
+        required: true,
+        schema: {$ref: '#/components/schemas/ActivationRequest'} 
+       }
+       */
+
+      try {
+         const { code } = req.body as { code: string };
+
+         const user = await UserModel.findOneAndUpdate({
+            activationCode: code,
+         }, {
+            isActive: true,
+         }, {
+            new: true,
+         });
+
+         res.status(200).json({
+            message: "user successfully activated.",
+            data: user,
+         });
+
+      } catch (error) {
+         const err = error as unknown as Error;
+
+         res.status(400).json({
+
+            message: err.message,
+            data: null,
+
+         });
+      }
    },
 };
